[tool.poetry]
name = "123"
version = "0.1.0"
description = ""
authors = ["ProMaker <rocker896@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
request2 = "^0.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
